add exclude to avoid build erros

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ sensu_twitter_username: sensuapp
 sensu_plugin_org:  sensu-plugins
 sensu_app_org: sensu
 
+exclude: ["vendor"]
+
 # Build settings
 markdown:    kramdown
 highlighter: rouge
