--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,28 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Sensu Plugins
+email: support@sensuapp.org
+irc: irc.freenode#sensu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  The home for all Sensu Official and Community plugins, handlers, extensions and mutators.
+license: > # this means to ignore newlines until "baseurl:"
+  Copyright 2011-2015 Sonian, Inc. and contributors.
+baseurl: ''
+url: 'http://sensu-plugins.github.io'
+sensu_twitter_username: sensuapp
+sensu_plugin_org:  sensu-plugins
+sensu_app_org: sensu
 
+exclude: ["vendor"]
+exclude: [vendor]
 # Build settings
-markdown: kramdown
+markdown:    kramdown
+highlighter: rouge
+
+kramdown:
+  auto_ids:       true
+  footnote_nr:    1
+  entity_output:  as_char
+  toc_levels:     1..6
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+  input: GFM
