--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ sensu_plugin_org:  sensu-plugins
 sensu_app_org: sensu
 
 exclude: ["vendor"]
-exclude: [vendor]
+#exclude: [vendor]
 # Build settings
 markdown:    kramdown
-highlighter: rouge
+#highlighter: rouge
 
 kramdown:
   auto_ids:       true
