--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,22 @@
 # Site settings
 title: Sensu Plugins
-email: support@sensuapp.org
+
+support_email: support@sensuapp.org
+users_email: sensu-users@googlegroups.com
+dev_email: sensu-dev@googlegroups.com
 irc: irc.freenode#sensu
+
+sensu_twitter_username: sensuapp
+sensu_plugin_org:  sensu-plugins
+sensu_app_org: sensu
+
 description: > # this means to ignore newlines until "baseurl:"
   The home for all Sensu Official and Community plugins, handlers, extensions and mutators.
 license: > # this means to ignore newlines until "baseurl:"
   Copyright 2011-2015 Sonian, Inc. and contributors.
+
 baseurl: ''
 url: 'http://sensu-plugins.github.io'
-sensu_twitter_username: sensuapp
-sensu_plugin_org:  sensu-plugins
-sensu_app_org: sensu
 
 
 # Build settings
