--- a/_config.yml
+++ b/_config.yml
@@ -30,3 +30,7 @@ kramdown:
   smart_quotes:   lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
   input: GFM
+
+gems:
+  - jekyll-sitemap
+  - jekyll-mentions
