--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ sensu_plugin_org:  sensu-plugins
 sensu_app_org: sensu
 
 description: > # this means to ignore newlines until "baseurl:"
-  The home for all Sensu Official and Community plugins, handlers, extensions and mutators.
+  The home for all Sensu Community plugins, handlers, and mutators.
 license: > # this means to ignore newlines until "baseurl:"
-  Copyright 2011-2015 Sonian, Inc. and contributors.
+  Copyright 2015 Sensu-Plugins and contributors.
 
 baseurl: ''
 url: 'http://sensu-plugins.github.io'
