--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,12 @@
 title: Sensu Plugins
 
 support_email: support@sensuapp.org
-users_email: sensu-users@googlegroups.com
-dev_email: sensu-dev@googlegroups.com
 irc: irc.freenode#sensu
 
-sensu_twitter_username: sensuapp
-sensu_plugin_org:  sensu-plugins
-sensu_app_org: sensu
-
 description: > # this means to ignore newlines until "baseurl:"
-  The home for all Sensu Community plugins, handlers, and mutators.
+  The home for all Sensu Community plugins, handlers, and mutators. Open Source under MIT License.
 license: > # this means to ignore newlines until "baseurl:"
-  Copyright 2015 Sensu-Plugins and contributors.
+  Copyright &copy; 2015-2016 Sensu-Plugins and contributors.
 
 baseurl: ''
 url: 'http://sensu-plugins.github.io'
@@ -31,7 +25,7 @@ kramdown:
   enable_coderay: false
   input: GFM
 
-doc_cat: ["Overview", "Development", "Infrastructure", "User"]
+doc_cat: ["User", "Development", "Infrastructure"]
 
 gems:
   - jekyll-sitemap
