--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Sensu Plugins
 
 support_email: community@sensu.io
-slack: slack.sensu-plugins.io
+slack: slack.sensu.io
 
 description: > # this means to ignore newlines until "baseurl:"
   The home for all Sensu Community plugins, handlers, and mutators. Open Source under MIT License.
@@ -34,4 +34,3 @@ gems:
 collections:
   docs:
     output: true
-
